--- a/app/src/main/res/layout/dialog_pay.xml
+++ b/app/src/main/res/layout/dialog_pay.xml
@@ -40,14 +40,14 @@
         android:layout_marginRight="10dp"
         android:layout_height="0.5dp"
         android:background="@color/lineColor"/>
-    <com.edu.schooltask.view.InputText
+    <com.edu.schooltask.view.Inputtextview.InputTextView
         android:layout_marginBottom="10dp"
         android:id="@+id/pwd_pwd"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:inputType="password"
-        app:text="支付密码">
-    </com.edu.schooltask.view.InputText>
+        app:IT_inputType="password"
+        app:IT_text="支付密码">
+    </com.edu.schooltask.view.Inputtextview.InputTextView>
     <TextView
         android:id="@+id/pay_set_pwd"
         android:layout_marginRight="10dp"
