--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -21,6 +21,7 @@
                 app:layout_scrollFlags="scroll">
                 <com.youth.banner.Banner
                     android:id="@+id/home_banner"
+                    android:background="@color/divide"
                     android:layout_width="match_parent"
                     android:layout_height="200dp">
                 </com.youth.banner.Banner>
