--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,21 +4,21 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.edu.schooltask.view.InputText
+    <com.edu.schooltask.view.Inputtextview.InputTextView
         android:id="@+id/login_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:text="手机号"
-        app:hint="请输入手机号">
-    </com.edu.schooltask.view.InputText>
-    <com.edu.schooltask.view.InputText
+        app:IT_text="手机号"
+        app:IT_hint="请输入手机号">
+    </com.edu.schooltask.view.Inputtextview.InputTextView>
+    <com.edu.schooltask.view.Inputtextview.InputTextView
         android:id="@+id/login_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:inputType="password"
-        app:hint="请输入密码"
-        app:text="密  码">
-    </com.edu.schooltask.view.InputText>
+        app:IT_inputType="password"
+        app:IT_hint="请输入密码"
+        app:IT_text="密  码">
+    </com.edu.schooltask.view.Inputtextview.InputTextView>
     <TextView
         android:layout_gravity="right"
         android:layout_alignParentRight="true"
