--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="InputText">
-        <attr name="text" format="string"/>
-        <attr name="hint" format="string"/>
-        <attr name="inputType" format="string"/>
+    <declare-styleable name="InputTextView">
+        <attr name="IT_text" format="string"/>
+        <attr name="IT_hint" format="string"/>
+        <attr name="IT_inputType" format="string"/>
+        <attr name="IT_tip" format="string"/>
     </declare-styleable>
 
     <declare-styleable name="SelectText">
