--- a/app/src/main/res/layout/activity_set_pay_pwd.xml
+++ b/app/src/main/res/layout/activity_set_pay_pwd.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,28 +7,49 @@
     android:orientation="vertical"
     tools:context=".ui.activity.SetPayPwdActivity">
     <include layout="@layout/toolbar"/>
-    <com.edu.schooltask.ui.view.Inputtextview.InputTextView
+    <com.edu.schooltask.ui.view.InputTextView
         android:id="@+id/spp_pwd"
+        android:layout_below="@id/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:IT_inputType="password"
-        app:IT_text="支付密码"
-        app:IT_hint="请输入支付密码，格式为6位数字">
-    </com.edu.schooltask.ui.view.Inputtextview.InputTextView>
-    <com.edu.schooltask.ui.view.Inputtextview.InputTextView
+        android:layout_height="wrap_content"
+        app:IT_inputType="payPassword"
+        app:IT_text="请输入支付密码">
+    </com.edu.schooltask.ui.view.InputTextView>
+    <com.edu.schooltask.ui.view.InputTextView
         android:id="@+id/spp_pwd_2"
+        android:layout_below="@id/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:IT_inputType="password"
-        app:IT_text="再次输入"
-        app:IT_hint="请再次输入支付密码">
-    </com.edu.schooltask.ui.view.Inputtextview.InputTextView>
-    <Button
-        android:id="@+id/spp_confirm_btn"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:IT_inputType="payPassword"
+        app:IT_text="请再次输入支付密码">
+    </com.edu.schooltask.ui.view.InputTextView>
+    <TextView
+        android:id="@+id/spp_pre_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spp_pwd"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:text="上一步"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/spp_success_tip"
+        android:layout_alignTop="@id/spp_pwd"
+        android:layout_alignBottom="@id/spp_pwd"
+        android:layout_alignLeft="@id/spp_pwd"
+        android:layout_alignRight="@id/spp_pwd"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        android:text="设置成功"
+        android:visibility="gone"/>
+    <com.edu.schooltask.ui.view.PayPasswordInputBoard
+        android:id="@+id/spp_ppib"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="20dp"
-        android:textColor="@color/white"
-        android:background="@drawable/btn_theme_normal"
-        android:text="确认"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+    </com.edu.schooltask.ui.view.PayPasswordInputBoard>
+</RelativeLayout>
