--- a/app/src/main/res/layout/view_bottom_tab.xml
+++ b/app/src/main/res/layout/view_bottom_tab.xml
@@ -18,6 +18,7 @@
             android:layout_height="25dp"
             android:src="@drawable/ic_home"/>
         <TextView
+            android:id="@+id/bm_home_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -36,7 +37,7 @@
             android:layout_width="30dp"
             android:layout_height="25dp">
             <ImageView
-                android:id="@+id/bm_talk_icon"
+                android:id="@+id/bm_message_icon"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
@@ -51,6 +52,7 @@
                 android:visibility="invisible"/>
         </RelativeLayout>
         <TextView
+            android:id="@+id/bm_message_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -83,6 +85,7 @@
             android:layout_height="25dp"
             android:src="@drawable/ic_order"/>
         <TextView
+            android:id="@+id/bm_order_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -103,6 +106,7 @@
             android:layout_height="25dp"
             android:src="@drawable/ic_user"/>
         <TextView
+            android:id="@+id/bm_user_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
