--- a/app/src/main/res/drawable/bg_text_list.xml
+++ b/app/src/main/res/drawable/bg_text_list.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/white" />
     <stroke
-        android:width="0.1dp"
+        android:width="0.5dp"
         android:color="@color/lineColor" />
-    <corners android:radius="5dp"/>
 </shape>
