--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
     <com.alexvasilkov.gestures.views.GestureImageView
         android:id="@+id/image_image"
+        android:scaleType="fitCenter"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
