--- a/app/src/main/res/layout/list_school.xml
+++ b/app/src/main/res/layout/list_school.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/bg_school_list"
-    android:layout_width="250dp"
+    android:background="@drawable/bg_text_list"
+    android:layout_width="200dp"
     android:layout_height="wrap_content">
-    <android.support.v7.widget.RecyclerView
+    <com.edu.schooltask.ui.view.recyclerview.TextRecyclerView
         android:id="@+id/school_rv"
+        android:layout_margin="1dp"
         android:fadingEdge="none"
         android:overScrollMode="never"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+    </com.edu.schooltask.ui.view.recyclerview.TextRecyclerView>
 </LinearLayout>
