--- a/app/src/main/res/layout/view_bottom_tab.xml
+++ b/app/src/main/res/layout/view_bottom_tab.xml
@@ -26,7 +26,7 @@
             android:text="首页"/>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/bm_talk"
+        android:id="@+id/bm_message"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:background="?attr/selectableItemBackgroundBorderless"
