--- a/app/src/main/res/layout/view_input_text.xml
+++ b/app/src/main/res/layout/view_input_text.xml
@@ -45,6 +45,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_action_tip"
         android:gravity="center"
