--- a/app/src/main/res/layout/view_user_release.xml
+++ b/app/src/main/res/layout/view_user_release.xml
@@ -29,6 +29,8 @@
         android:id="@+id/ur_release_time"
         android:layout_below="@id/ur_name"
         android:layout_marginTop="5dp"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
         android:layout_alignLeft="@id/ur_name"
         android:textColor="@color/hintColor"
         android:layout_width="wrap_content"
@@ -37,19 +39,19 @@
     <TextView
         android:id="@+id/ur_school"
         android:textSize="10sp"
-        android:textColor="@color/hintColor"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/ur_release_time"
+        android:layout_alignTop="@id/ur_release_time"
         android:layout_alignBottom="@id/ur_release_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_label"/>
     <TextView
         android:id="@+id/ur_des"
+        android:layout_alignTop="@id/ur_release_time"
         android:layout_alignBottom="@id/ur_release_time"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/ur_school"
-        android:textColor="@color/hintColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_label"
