--- a/app/src/main/res/drawable/bg_text_list.xml
+++ b/app/src/main/res/drawable/bg_text_list.xml
@@ -2,8 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
+    <corners android:radius="3dp" />
     <solid android:color="@color/white" />
     <stroke
         android:width="0.5dp"
         android:color="@color/lineColor" />
+    <padding android:bottom="1dp"
+        android:top="1dp"
+        android:left="1dp"
+        android:right="1dp"/>
 </shape>
