--- a/app/src/main/res/layout/activity_task_order.xml
+++ b/app/src/main/res/layout/activity_task_order.xml
@@ -97,86 +97,94 @@
         android:layout_above="@id/order_bottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <include layout="@layout/toolbar"/>
             <com.baoyz.widget.PullRefreshLayout
                 android:id="@+id/order_prl"
+                android:layout_below="@id/toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:refreshColor="@color/colorPrimary">
-                <ScrollView
-                    android:id="@+id/order_layout"
+                <com.edu.schooltask.ui.view.MyScrollView
+                    android:id="@+id/order_msv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:fillViewport="true"
                     android:fadingEdge="none"
                     android:overScrollMode="never">
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:text="订单信息"
-                            android:background="@color/white"
-                            android:textSize="12sp"
-                            android:gravity="center_vertical"
-                            android:paddingLeft="10dp"/>
-                        <include layout="@layout/line_margin"/>
                         <LinearLayout
-                            android:paddingTop="10dp"
-                            android:background="@color/white"
+                            android:id="@+id/order_header"
+                            android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:orientation="horizontal">
+                            android:layout_height="wrap_content">
                             <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="订单号"
-                                android:paddingLeft="10dp"
-                                android:paddingRight="10dp"
-                                android:textSize="12sp"
-                                android:gravity="center"/>
-                            <TextView
-                                android:id="@+id/order_id"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:textSize="12sp"
+                                android:layout_height="40dp"
+                                android:text="订单信息"
+                                android:background="@color/white"
+                                android:textSize="13sp"
                                 android:gravity="center_vertical"
-                                android:textIsSelectable="true"/>
+                                android:paddingLeft="10dp"/>
+                            <include layout="@layout/line_margin"/>
+                            <LinearLayout
+                                android:paddingTop="10dp"
+                                android:background="@color/white"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="订单号"
+                                    android:paddingLeft="10dp"
+                                    android:paddingRight="10dp"
+                                    android:textSize="12sp"
+                                    android:gravity="center"/>
+                                <TextView
+                                    android:id="@+id/order_id"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:textSize="12sp"
+                                    android:gravity="center_vertical"
+                                    android:textIsSelectable="true"/>
+                            </LinearLayout>
+                            <com.edu.schooltask.ui.view.TaskItemView
+                                android:id="@+id/order_tiv"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                            </com.edu.schooltask.ui.view.TaskItemView>
+                            <TextView
+                                android:layout_marginTop="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:text="订单状态"
+                                android:background="@color/white"
+                                android:textSize="13sp"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="10dp"/>
+                            <include layout="@layout/line_margin"/>
+                            <com.edu.schooltask.ui.view.recyclerview.OrderStateRecyclerView
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:id="@+id/order_osrv"
+                                android:background="@color/white"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                            </com.edu.schooltask.ui.view.recyclerview.OrderStateRecyclerView>
+                            <include layout="@layout/divide"/>
                         </LinearLayout>
-                        <com.edu.schooltask.ui.view.TaskItemView
-                            android:id="@+id/order_tiv"
+                        <RelativeLayout
+                            android:id="@+id/order_count_layout"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </com.edu.schooltask.ui.view.TaskItemView>
-                        <TextView
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:text="订单状态"
-                            android:background="@color/white"
-                            android:textSize="12sp"
-                            android:gravity="center_vertical"
-                            android:paddingLeft="10dp"/>
-                        <include layout="@layout/line_margin"/>
-                        <com.edu.schooltask.ui.view.recyclerview.OrderStateRecyclerView
-                            android:paddingTop="20dp"
-                            android:id="@+id/order_osrv"
-                            android:fadingEdge="none"
-                            android:overScrollMode="never"
-                            android:background="@color/white"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </com.edu.schooltask.ui.view.recyclerview.OrderStateRecyclerView>
-                        <com.edu.schooltask.ui.view.TaskCountView
-                            android:id="@+id/order_count"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                        <include layout="@layout/line_margin"/>
+                            android:layout_height="40dp">
+                        </RelativeLayout>
                         <!-- 这个布局是为了防止RecyclerView显示不全 -->
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -184,23 +192,25 @@
                             <com.edu.schooltask.ui.view.recyclerview.CommentRecyclerView
                                 android:id="@+id/order_crv"
                                 android:background="@color/white"
-                                android:fadingEdge="none"
-                                android:overScrollMode="never"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
                             </com.edu.schooltask.ui.view.recyclerview.CommentRecyclerView>
                         </RelativeLayout>
                     </LinearLayout>
-                </ScrollView>
+                </com.edu.schooltask.ui.view.MyScrollView>
             </com.baoyz.widget.PullRefreshLayout>
-        </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/order_count_layout_top"
+                android:layout_below="@id/toolbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+            </RelativeLayout>
+        </RelativeLayout>
 
         <com.edu.schooltask.ui.view.CommentReplyView
             android:id="@+id/order_comment_reply_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fadingEdge="none"
-            android:overScrollMode="never"
             android:visibility="invisible">
         </com.edu.schooltask.ui.view.CommentReplyView>
     </RelativeLayout>
