--- a/app/src/main/res/layout/item_order_state.xml
+++ b/app/src/main/res/layout/item_order_state.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -23,6 +23,7 @@
             android:id="@+id/os_state_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="13sp"
             android:text="发布订单"/>
         <TextView
             android:id="@+id/os_state_text"
